--- a/src/assets/sass/_designlab.sass
+++ b/src/assets/sass/_designlab.sass
@@ -5,19 +5,14 @@
     background: 
         size: cover
 
-.design_container
-    max-width: 1000px
-    margin: auto
-
-.design_title
+.design__title
     font-size: 48px
 
-.design_text
+.design__text
     color: $white
     font-size: 24px
 
-.design_buttons .button_gray
-    @extend  %button-base
+.design__buttons .button_gray
     margin:
         top: 36px
         right: 16px
@@ -26,7 +21,6 @@
         right: 60px
     border: none
 
-.design_buttons .button_green
-    @extend  %button-base
+.design__buttons .button_green
     margin-top: 36px
     border: none
