--- a/src/assets/sass/_footer.sass
+++ b/src/assets/sass/_footer.sass
@@ -4,15 +4,15 @@ footer
         bottom: 28px
     background-color: $dark_gray
 
-.footer_container
+.footer__container
     width: 90%
     margin: auto
     
-.footer_title
+.footer__title
     margin-bottom: 34px
     color: $green
 
-.footer_link
+.footer__link
     padding: 0px
     list-style-type: none
 
@@ -27,23 +27,23 @@ footer
         &:hover
             color: $green
 
-.footer_icons
+.footer__icons
     img
         margin-right: 20px
 
-.footer_line
+.footer__line
     width: 90%
     height: 1px
     margin: auto
     background-color: $white
 
-.footer_content
+.footer__content
     display: flex
     justify-content: space-around
     width: 90%
     margin: auto
 
-.footer_copy
+.footer__copy
     display: flex
     justify-content: space-between
     width: 90%
