--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -104,3 +104,5 @@ h4
 @import "_carousel.sass";
 @import "_bestvalue.sass";
 @import "_exclusive.sass";
+@import "_designlab.sass";
+@import "_footer.sass";
