--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -703,3 +703,48 @@ footer {
 .specifications_buttons .button_gray {
   padding: 13px 20px 18px;
 }
+
+.form_title {
+  margin-top: 60px;
+  color: #252627;
+  text-align: center;
+}
+
+.form_wrap {
+  margin: 40px 0px 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.form_button {
+  width: 400px;
+  font-size: 24px;
+}
+
+.input-wrap {
+  margin: 16px;
+}
+
+.input-wrap input {
+  width: 400px;
+  padding: 10px 20px;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+}
+
+.alert-sucsess {
+  margin: 30px 0px 60px;
+  padding: 20px;
+  text-align: center;
+  color: #8DD83D;
+  font-size: 26px;
+}
